Added few sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,9 @@
 @import "vars";
 @import "global";
 
+@import "header";
 @import "hero";
+@import "about";
+@import "services";
 
 @import "adaptive";
