--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -17,7 +17,6 @@ body {
   min-width: 320px;
   margin: 0;
   font-family: $font-family;
-  font-size: 16px;
   font-weight: 400;
   line-height: 32px;
   color: #fff;
@@ -59,6 +58,7 @@ body {
 }
 
 .title {
+  margin: 0;
   font-family: "Overpass";
   font-weight: 700;
   font-size: 56px;
@@ -66,10 +66,12 @@ body {
 }
 
 .subtitle {
+  margin: 0;
   line-height: 32px;
 }
 
 .uptitle {
+  margin: 0;
   font-size: 16px;
   line-height: 22px;
 }
@@ -81,4 +83,16 @@ body {
   color: #100c46;
   padding: 19px 46px;
   background-color: #fff;
+  box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  transition: all 0.2s ease-in-out;
+
+  &__text {
+    margin: 0;
+  }
+
+  &:hover {
+    color: #fff;
+    background-color: #100c46;
+  }
 }
