--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,9 +2,13 @@
 @import "vars";
 @import "global";
 
+@import "gallery";
+
 @import "header";
 @import "hero";
 @import "about";
 @import "services";
+@import "works";
+@import "team";
 
 @import "adaptive";
