--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -30,6 +30,10 @@
     color: rgba(255, 255, 255, 0.8);
   }
 
+  &__item {
+    position: relative;
+  }
+
   &__img {
     position: relative;
     left: -100px;
