--- a/src/scss/adaptive.scss
+++ b/src/scss/adaptive.scss
@@ -1,7 +1,118 @@
 @media (max-width: 1225px) {
+  .services__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .contact__banner {
+    margin-right: 270px;
+  }
+
+  .contact__img {
+    max-width: 460px;
+  }
+
+  .contact__items {
+    left: 204px;
+  }
 }
 
 @media (max-width: 992px) {
+  .about__container {
+    grid-template-columns: none;
+  }
+
+  .about__banner {
+    margin-right: -15px;
+  }
+
+  .about__item {
+    background-image: url("@img/about/about.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+
+  .about__img {
+    left: 0;
+    opacity: 0;
+  }
+
+  .services__container {
+    flex-direction: column;
+  }
+
+  .services__banner {
+    padding-bottom: 119px;
+  }
+
+  .services__items {
+    grid-template-columns: repeat(2, 296px);
+    padding-right: 0;
+  }
+
+  .services__images {
+    padding-top: 135px;
+    padding-bottom: 215px;
+    margin-left: -15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .services__img_first {
+    left: -60px;
+  }
+
+  .services__img_second {
+    top: 358px;
+    right: 210px;
+  }
+
+  .contact__container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .contact__banner {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 19px;
+    align-items: center;
+  }
+
+  .contact__data {
+    width: 100%;
+    min-height: 630px;
+    padding-right: 15px;
+    margin-right: -30px;
+  }
+
+  .contact__img {
+    left: 0;
+    // margin-bottom: 3;
+  }
+
+  .contact__items {
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: none;
+    // margin-bottom: 30px;
+    align-items: center;
+    max-width: 250px;
+    text-align: center;
+  }
+
+  .contact__info {
+    display: block;
+  }
 }
 
 @media (max-width: 768px) {
