--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -73,6 +73,8 @@
     align-items: center;
     min-height: 900px;
     position: relative;
+    padding-right: 15px;
+    margin-right: -15px;
   }
 
   &__items {
