--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -1,6 +1,7 @@
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(auto, 300px));
+  // grid-template-columns: repeat(auto-fit, minmax(auto, 300px));
+  grid-template-columns: repeat(4, 1fr);
   justify-content: space-between;
   row-gap: 23px;
 
@@ -22,13 +23,14 @@
   &__sign {
     position: absolute;
     bottom: 8px;
-    left: 0;
+    left: 50%;
+    margin-left: -150px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(98, 87, 254, 0.8);
     padding: 12px 18px;
-    width: 100%;
+    width: 300px;
   }
 
   &__author {
