--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: stretch;
     align-content: stretch;
+    justify-content: space-between;
     min-height: 900px;
   }
 
@@ -72,6 +73,7 @@
     padding: 0 50px;
     padding-top: 119px;
     position: relative;
+    margin-right: -15px;
   }
 
   &__img {
@@ -85,7 +87,7 @@
 
   &__img_second {
     position: absolute;
-    bottom: 0;
+    top: 400px;
     right: 0;
   }
 }
