--- a/src/scss/adaptive.scss
+++ b/src/scss/adaptive.scss
@@ -56,22 +56,7 @@
   }
 
   .services__images {
-    padding-top: 135px;
-    padding-bottom: 215px;
-    margin-left: -15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .services__img_first {
-    left: -60px;
-  }
-
-  .services__img_second {
-    top: 358px;
-    right: 210px;
+    display: none;
   }
 
   .contact__container {
@@ -89,14 +74,13 @@
 
   .contact__data {
     width: 100%;
-    min-height: 630px;
+    min-height: auto;
     padding-right: 15px;
     margin-right: -30px;
   }
 
   .contact__img {
     left: 0;
-    // margin-bottom: 3;
   }
 
   .contact__items {
@@ -104,7 +88,6 @@
     top: 0;
     left: 0;
     max-width: none;
-    // margin-bottom: 30px;
     align-items: center;
     max-width: 250px;
     text-align: center;
@@ -116,9 +99,69 @@
 }
 
 @media (max-width: 768px) {
+  .hero__container {
+    flex-direction: column;
+  }
+
+  .hero__banner {
+    padding-top: 195px;
+    padding-bottom: 145px;
+  }
+
+  .hero__item {
+    width: auto;
+  }
+
+  .services__items {
+    grid-template-columns: repeat(1, 296px);
+  }
+
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .contact__container {
+    display: block;
+  }
+
+  .contact__banner {
+    width: auto;
+  }
+
+  .contact__data {
+    flex-direction: column;
+    width: auto;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+
+  .contact__img {
+    max-width: fit-content;
+  }
+
+  .contact__items {
+    margin: 30px 0;
+  }
 }
 
 @media (max-width: 576px) {
+  .hero__banner {
+    min-width: auto;
+  }
+
+  .about__banner {
+    padding: 125px 135px 125px 85px;
+  }
+
+  .services__banner {
+    padding-bottom: 0;
+  }
+
+  .footer__container {
+    justify-content: flex-start;
+  }
 }
 
 @media (max-width: 375px) {
